# qtexteditor

./: .gitignore  .gitmodules  CMakeLists.txt  QtLaTeX.pro  README.md  cn.ts  editor.ui  login.ui  myapp.rc  myqrc.qrc  passwdedit.cpp  passwdedit.h  qss.qrc  register.ui  systemtrayicon.h
demo/: testDoc.html  testDoc.tex  testDoc2.htm  testDoc3.html
images/qss/: black.qss
plugins/: config.xml
resources/: cn.qm  en.qm  en.ts  myqrc.qrc
resources/images/qss/: black.qss  white.qss
src/: AccountManager.cpp  AccountManager.h  HTMLParser.cpp  HTMLParser.h  editor.cpp  editor.h  editor.ui  exam.cpp  exam.h  exam.ui  login.cpp  login.h  login.ui  main.cpp  mtextedit.cpp  mtextedit.h  passwdedit.cpp  passwdedit.h  passwdedit.ui  register.cpp  register.h  register.ui  systemtrayicon.cpp  systemtrayicon.h
